--- a/_sass/_materialize.scss
+++ b/_sass/_materialize.scss
@@ -12,28 +12,28 @@
 // components
 @import "components/global";
 /*@import "components/badges";
-@import "components/icons-material-design";*/
+@import "components/icons-material-design";
 @import "components/grid";
-@import "components/navbar";
+@import "components/navbar";*/
 @import "components/roboto";
 @import "components/typography";
 /*@import "components/transitions";
 @import "components/cards";
 @import "components/toast";
 @import "components/tabs";
-@import "components/tooltip";*/
+@import "components/tooltip";
 @import "components/buttons";
-//@import "components/dropdown";
+@import "components/dropdown";
 @import "components/waves";
-/*@import "components/modal";
+@import "components/modal";
 @import "components/collapsible";
-@import "components/chips";*/
+@import "components/chips";
 @import "components/materialbox";
 @import "components/forms/forms";
 /*@import "components/table_of_contents";
-@import "components/sideNav";
+@import "components/sideNav";*/
 @import "components/preloader";
-@import "components/slider";
+/*@import "components/slider";
 @import "components/carousel";
 @import "components/tapTarget";
 @import "components/pulse";
