removed a lot of unecessary materialize

--- a/_sass/_materialize.scss
+++ b/_sass/_materialize.scss
@@ -10,8 +10,8 @@
 @import "components/normalize";
 
 // components
-@import "components/global";
-/*@import "components/badges";
+/*@import "components/global";
+@import "components/badges";
 @import "components/icons-material-design";
 @import "components/grid";
 @import "components/navbar";*/
